--- a/static/main.scss
+++ b/static/main.scss
@@ -23,7 +23,7 @@
   top: 0;
 }
 .toggle__button--sidenav {
-  top: 50vh;
+  margin-top: 50vh;
 }
 .toggle__button:hover {
   color: #ffffff;
@@ -54,4 +54,7 @@
 }
 .close:after {
   transform: rotate(-45deg);
+}
+.container {
+  margin: 0 25px 0 25px;
 }
