--- a/style.css
+++ b/style.css
@@ -2,3 +2,82 @@
 * {
   font-family: "Roboto", sans-serif !important;
 }
+
+.info-box-wrap {
+  background: #fff;
+  overflow: hidden;
+  box-shadow: 5px 5px 0px rgba(0, 0, 0, 0.08);
+}
+
+.info-box-text-wrap {
+  height: 40px !important;
+  width: 120px;
+  float: left;
+  overflow: hidden;
+}
+
+.action-btns {
+  float: left;
+  width: 70px;
+  overflow: hidden;
+  position: relative;
+  top: 12px;
+  left: 6px;
+}
+
+.action-btns i {
+  font-size: 18px;
+  color: #78a737;
+  margin-left: 3px;
+}
+
+.action-btns i:hover {
+  transition: color 0.5s ease;
+  color: #ccc;
+  cursor: pointer;
+}
+
+.action-btns i.fa-heart-o {
+  font-weight: bold;
+}
+
+.info-box-text-wrap h6.address {
+  padding: 6px 5px 1px 0;
+  margin: 0 0 0 0;
+  font-family: "Roboto Slab";
+  color: #0c99c8;
+  font-weight: 700;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.info-box-text-wrap p {
+  padding: 0 0 0 0;
+  margin: 0 0 0 0;
+}
+
+.info-box-text-wrap p.price {
+  color: #b25b00;
+}
+
+.info-box-wrap img {
+  width: 40px !important;
+  height: 40px;
+  float: left;
+  margin-right: 10px;
+  padding-top: 0;
+  margin-top: 0;
+}
+
+.infoBox:before {
+  content: " ";
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid #fff;
+  position: absolute;
+  top: -10px;
+  left: 130px;
+}
